#223 fix tooltip overlapping inputs when creating new account in tuto

--- a/src/_webapp/ressources/css/public.css
+++ b/src/_webapp/ressources/css/public.css
@@ -439,6 +439,7 @@ body.touch:not(.mode1)  .list-group-item[valid="true"]:after {
     }
     #nav-signup input[type="text"],  #nav-signup input[type="password"]:not([exclude="true"]) {
         max-height: 7vh;
+        min-height: 32px;
     }
 }
 
